..F....... [ZBX-15537] fixed visual bug when filter tab was overlapped by sub navigation           [-c 90344 ^/branches/4.0]

--- a/sass/stylesheets/sass/screen.scss
+++ b/sass/stylesheets/sass/screen.scss
@@ -660,10 +660,13 @@ article {
 .filter-breadcrumb {
 	display: inline-block;
 	z-index: 3;
+	max-width: calc(100vw - 200px);
 
 	li {
 		line-height: 14px;
 		vertical-align: top;
+		float: none;
+		display: inline-block;
 
 		.status-container {
 			padding-top: 3px;
@@ -675,6 +678,7 @@ article {
 			padding: 4px 7px 0;
 
 			a {
+				display: inline-block;
 				max-width: 200px;
 				overflow: hidden;
 				text-overflow: ellipsis;
@@ -688,7 +692,6 @@ article {
 	}
 
 	> li:first-child {
-		float: left;
 		white-space: nowrap;
 	}
 
